--- a/cimet-dev-frontend/src/components/product.css
+++ b/cimet-dev-frontend/src/components/product.css
@@ -27,7 +27,7 @@
 }
 
 .secondary-color {
-    color: #676a6d;
+    color: #8d8b8b;
 }
 
 .card {
@@ -57,8 +57,8 @@
     top: -2.2vh;
 }
 
-.dmo-content>p>strong {
-    color: #676a6d;
+.dmo-content p strong, .dmo-content p b {
+    color: #8d8b8b;
 }
 
 .text-center-display {
